--- a/index.html
+++ b/index.html
@@ -3,7 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <link rel="icon" href="/Favicon.svg" type="image/x-icon">
+    <link rel="shortcut icon" href="/Favicon.svg" type="image/x-icon">
+
+    <meta name="description" content="Descrição concisa e cativante da sua página.">
+    <meta name="keywords" content="palavras, chave, relevantes, separadas, por, vírgulas">
+    <meta name="author" content="ReforMar - Obras Express">
+
     <title>ReforMar</title>
+
   </head>
   <body>
     <div id="root"></div>
