updated: index.html

--- a/index.html
+++ b/index.html
@@ -1,21 +1,41 @@
 <!doctype html>
 <html lang="pt-br">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <link rel="icon" href="/Favicon.svg" type="image/x-icon">
-    <link rel="shortcut icon" href="/Favicon.svg" type="image/x-icon">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <meta name="description" content="Descrição concisa e cativante da sua página.">
-    <meta name="keywords" content="palavras, chave, relevantes, separadas, por, vírgulas">
-    <meta name="author" content="ReforMar - Obras Express">
+  <!-- Favicon -->
+  <link rel="icon" href="/Favicon.svg" type="image/svg+xml">
+  <link rel="shortcut icon" href="/Favicon.svg" type="image/svg+xml">
 
-    <title>ReforMar</title>
+  <!-- SEO Meta Tags -->
+  <meta name="description" content="A ReforMar - Obras Express oferece serviços rápidos e eficientes de reforma e construção. Confie em nossa equipe especializada para transformar seu espaço com qualidade e agilidade.">
+  <meta name="keywords" content="reforma, construção, obras express, reforma residencial, reforma comercial, reformas rápidas, qualidade, agilidade, ReforMar">
+  <meta name="author" content="ReforMar - Obras Express">
 
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+  <!-- Open Graph Meta Tags -->
+  <meta property="og:title" content="ReforMar - Reformas e Construções Rápidas">
+  <meta property="og:description" content="A ReforMar - Obras Express oferece serviços rápidos e eficientes de reforma e construção. Confie em nossa equipe especializada para transformar seu espaço com qualidade e agilidade.">
+  <meta property="og:image" content="https://reformarobrasexpress.com.br/assets/image1-Bzcdwp6d.jpg">
+  <meta property="og:url" content="https://reformarobrasexpress.com.br">
+  <meta property="og:type" content="website">
+  <meta property="og:locale" content="pt_BR">
+
+  <!-- Twitter Meta Tags -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="ReforMar - Reformas e Construções Rápidas">
+  <meta name="twitter:description" content="A ReforMar - Obras Express oferece serviços rápidos e eficientes de reforma e construção. Confie em nossa equipe especializada para transformar seu espaço com qualidade e agilidade.">
+  <meta name="twitter:image" content="https://reformarobrasexpress.com.br/assets/image1-Bzcdwp6d.jpg">
+
+  <!-- Title -->
+  <title>ReforMar - Reformas e Construções Rápidas</title>
+
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.jsx"></script>
+</body>
+
 </html>
