--- a/index.html
+++ b/index.html
@@ -27,7 +27,12 @@
   <meta name="twitter:title" content="ReforMar - Reformas e Construções Rápidas">
   <meta name="twitter:description" content="A ReforMar - Obras Express oferece serviços rápidos e eficientes de reforma e construção. Confie em nossa equipe especializada para transformar seu espaço com qualidade e agilidade.">
   <meta name="twitter:image" content="https://reformarobrasexpress.com.br/assets/image1-Bzcdwp6d.jpg">
-
+  
+  <meta property="og:title" content="Reformar Obras Express">
+  <meta property="og:description" content="Serviços rápidos de reforma e construção.">
+  <meta property="og:image" content="https://reformarobrasexpress.com.br/assets/image1-Bzcdwp6d.jpg">
+  <meta property="og:url" content="https://reformarobrasexpress.com.br/">
+  <meta property="og:type" content="website">
   <!-- Title -->
   <title>ReforMar - Reformas e Construções Rápidas</title>
 
