add new popup for form

--- a/index.html
+++ b/index.html
@@ -10,13 +10,16 @@
   <link rel="shortcut icon" href="/Favicon.svg" type="image/svg+xml">
 
   <!-- SEO Meta Tags -->
-  <meta name="description" content="A ReforMar - Obras Express oferece serviços rápidos e eficientes de reforma e construção. Confie em nossa equipe especializada para transformar seu espaço com qualidade e agilidade.">
-  <meta name="keywords" content="reforma, construção, obras express, reforma residencial, reforma comercial, reformas rápidas, qualidade, agilidade, ReforMar">
+  <meta name="description"
+    content="A ReforMar - Obras Express oferece serviços rápidos e eficientes de reforma e construção. Confie em nossa equipe especializada para transformar seu espaço com qualidade e agilidade.">
+  <meta name="keywords"
+    content="reforma, construção, obras express, reforma residencial, reforma comercial, reformas rápidas, qualidade, agilidade, ReforMar">
   <meta name="author" content="ReforMar - Obras Express">
 
   <!-- Open Graph Meta Tags -->
   <meta property="og:title" content="ReforMar - Reformas e Construções Rápidas">
-  <meta property="og:description" content="A ReforMar - Obras Express oferece serviços rápidos e eficientes de reforma e construção. Confie em nossa equipe especializada para transformar seu espaço com qualidade e agilidade.">
+  <meta property="og:description"
+    content="A ReforMar - Obras Express oferece serviços rápidos e eficientes de reforma e construção. Confie em nossa equipe especializada para transformar seu espaço com qualidade e agilidade.">
   <meta property="og:image" content="https://reformarobrasexpress.com.br/assets/image1-Bzcdwp6d.jpg">
   <meta property="og:url" content="https://reformarobrasexpress.com.br">
   <meta property="og:type" content="website">
@@ -25,9 +28,10 @@
   <!-- Twitter Meta Tags -->
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="ReforMar - Reformas e Construções Rápidas">
-  <meta name="twitter:description" content="A ReforMar - Obras Express oferece serviços rápidos e eficientes de reforma e construção. Confie em nossa equipe especializada para transformar seu espaço com qualidade e agilidade.">
+  <meta name="twitter:description"
+    content="A ReforMar - Obras Express oferece serviços rápidos e eficientes de reforma e construção. Confie em nossa equipe especializada para transformar seu espaço com qualidade e agilidade.">
   <meta name="twitter:image" content="https://reformarobrasexpress.com.br/assets/image1-Bzcdwp6d.jpg">
-  
+
   <meta property="og:title" content="Reformar Obras Express">
   <meta property="og:description" content="Serviços rápidos de reforma e construção.">
   <meta property="og:image" content="https://reformarobrasexpress.com.br/assets/image1-Bzcdwp6d.jpg">
@@ -40,6 +44,7 @@
 
 <body>
   <div id="root"></div>
+  <div id="portal"></div>
   <script type="module" src="/src/main.jsx"></script>
 </body>
 
