--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
   <meta property="og:image" content="https://reformarobrasexpress.com.br/assets/image1-Bzcdwp6d.jpg">
   <meta property="og:url" content="https://reformarobrasexpress.com.br/">
   <meta property="og:type" content="website">
+
+  <script src="https://apis.google.com/js/api.js"></script>
+
   <!-- Title -->
   <title>ReforMar - Reformas e Construções Rápidas</title>
 
